@@ -25,6 +25,8 @@
  * Wallet: Added new command line switch -xprv, to print wallet's master key
  * Wallet: Added new wallet's config value "hdpath", for flexible compatibility with external wallets (use with "type=4")
  * Lib/Others/Utils: Added support for blockstream.info/api and made it the default
+ * Lib/secp256k1: Added support BIP340 - new function SchnorrVerify()
+ * Lib/Others/cgo/sipasec: Added Schnorr_Verify() - note: build lib with "./configure --enable-module-schnorrsig --enable-experimental"
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
